--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@ Riders.ipynb
 2024_January_Stops.csv
 2023_04_stop_Apr_2023.csv
 test_setup.py
+Debug0.csv
+Debug1.csv
+Debug2.csv
+Debug3.csv
+Debug4.csv
+debug_segs.csv
